# axum-base-web

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: quick_dev.rs
src/: config.rs  ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
